--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <img class="logo" src="img/maple_leaf_transparent.png" alt="Logo">
             <div class="headerwords">
-                <h1>Jiarui Zhang</h1>
+                <h1>Jerry Z</h1>
                 <h5>Jr Software Developer</h5>
             </div>
         </header>
